feat: Add rich text editor to inbox messages with HTML sanitization
Replace plain textarea with Tiptap rich text editor for inbox messages,
supporting bold, italic, strikethrough, headings, links, lists, blockquotes,
inline code, text colors, and emoji. Add server-side HTML sanitization with
bleach to prevent XSS. Fix Tailwind Typography prose overriding inline colors
on child elements (strong, em, code). Fix SQLAlchemy subquery deprecation
warnings in messages router.

--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -28,6 +28,10 @@ pydantic-settings==2.1.0
 # Utilities
 python-dateutil==2.8.2
 
+# HTML sanitization (for rich text messages)
+bleach>=6.0.0
+tinycss2>=1.2.1
+
 # Google Calendar API
 google-api-python-client==2.115.0
 
