--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -20,6 +20,7 @@
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.39.12",
     "@floating-ui/react": "^0.27.16",
+    "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-color": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
